--- a/portfolio/src/app/components/sub-projects/sub-projects.component.html
+++ b/portfolio/src/app/components/sub-projects/sub-projects.component.html
@@ -1,13 +1,168 @@
-<!-- <section class="sub_projects_PC"> -->
+<section class="sub_projects_PC">
   <div class="sub_projects">
     <div class="container">
       <div class="row">
         <div class="col-12">
           <div class="high_text">
-            <h1>Imagination Trumps Knowledge!</h1>
+            <h1>{{ high_text[0].title }}</h1>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="small_title">
+            <div class="col-3">
+              <div class="column_title">
+
+                <span><p>Client</p>
+                CS GROUP
+                PROJECTS</span>
+              </div>
+            </div>
+
+            <div class="col-3">
+              <div class="column_title">
+                <span><p>Timeline</p>3 MONTHS</span>
+              </div>
+            </div>
+
+            <div class="col-3">
+              <div class="column_title">
+                <span><p>Services</p>UI/UX DESIGN</span>
+              </div>
+            </div>
+
+            <div class="col-3">
+              <div class="column_title">
+                <span><p>Website</p>STARLAB.COM</span>
+              </div>
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="big_content">
+
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="details_projects">
+            <h2>Details Projects</h2>
+            <div class="line">
+              <div class="col-6 pl-0">
+                <div class="content">
+                  <h3>CHALLENGE</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                </div>
+              </div>
+
+              <div class="col-6 pr-0">
+                <div class="content">
+                  <h3>GOAL</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                </div>
+              </div>
+            </div>
+
+            <div class="line">
+              <div class="col-6 pl-0">
+                <div class="content">
+                  <h3>SOLUTION</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                </div>
+              </div>
+
+              <div class="col-6 pr-0">
+                <div class="content">
+                  <h3>TEST</h3>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. </p>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+
+        <div class="col-12">
+          <div class="projects">
+            <div class="high_text">
+              <h3>Related projects</h3>
+            </div>
+            <!-- line 2 -->
+            <div class="content2">
+              <div class="col-12">
+                <div class="small_content">
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="sm_box">
+                        <div class="img">
+                          <img src="../../../assets/img/project_img/small_img.png" alt="">
+                        </div>
+                        <p>Website Template</p>
+                        <div class="divide">
+                          <h3>Starlab Group Projects</h3>
+                          <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                        </div>
+                        <a href="">Visit</a>
+                      </div>
+                    </div>
+
+                    <div class="col-6">
+                      <div class="sm_box">
+                        <div class="img">
+                          <img src="../../../assets/img/project_img/small_img.png" alt="">
+                        </div>
+                        <p>Website Template</p>
+                        <div class="divide">
+                          <h3>EZ-Games</h3>
+                          <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                        </div>
+                        <a href="">Visit</a>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="content2">
+              <div class="col-12">
+                <div class="small_content">
+                  <div class="row">
+                    <div class="col-6">
+                      <div class="sm_box">
+                        <div class="img">
+                          <img src="../../../assets/img/project_img/small_img.png" alt="">
+                        </div>
+                        <p>Website Template</p>
+                        <div class="divide">
+                          <h3>Sun Group Projects</h3>
+                          <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                        </div>
+                        <a href="">Visit</a>
+                      </div>
+                    </div>
+
+                    <div class="col-6">
+                      <div class="sm_box">
+                        <div class="img">
+                          <img src="../../../assets/img/project_img/small_img.png" alt="">
+                          <p>Website Template</p>
+                          <div class="divide">
+                            <h3>TV Cast 3</h3>
+                            <img src="../../../assets/img/project_img/figma_icon.png" alt="">
+                          </div>
+                          <a href="">Visit</a>
+                        </div>
+                      </div>
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
           </div>
         </div>
       </div>
     </div>
   </div>
-<!-- </section> -->
+</section>
