--- a/portfolio/src/app/components/sub-projects/sub-projects.component.html
+++ b/portfolio/src/app/components/sub-projects/sub-projects.component.html
@@ -160,9 +160,49 @@
                 </div>
               </div>
             </div>
+
+
           </div>
         </div>
+
+        <div class="col-12">
+          <div class="pre_next">
+            <div class="col-4 d-flex justify-content-start">
+              <div class="block1">
+                <img src="../../../assets/img/Rectangle.png" alt="">
+                <div class="text">
+                  <p><span>PREVIOUS</span><br>
+                  EZ-GAMES</p>
+                </div>
+              </div>
+            </div>
+            <div class="col-4 d-flex justify-content-center">
+              <div class="go_back"><p>GO BACK</p></div>
+            </div>
+            <div class="col-4 d-flex justify-content-end">
+              <div class="block2">
+                <div class="text">
+                  <p><span>NEXT</span><br>
+                  EZ-GAMES</p>
+                </div>
+                <img src="../../../assets/img/Rectangle.png" alt="">
+              </div>
+            </div>
+          </div>
+        </div>
+
       </div>
+    </div>
+  </div>
+
+
+  <div class="img_footer">
+    <img src="../../../assets/img/sub-projects.png" alt="">
+    <h3>LET’S CREATE<br>
+    YOUR NEW PROJECTS</h3>
+
+    <div class="centered-button">
+      <div class="scaling-button"><p>GET IN TOUCH</p></div>
     </div>
   </div>
 </section>
