--- a/portfolio/src/app/components/projects/projects.component.html
+++ b/portfolio/src/app/components/projects/projects.component.html
@@ -25,7 +25,7 @@
                     <p>A feature-rich Crypto Screener App using React, Tailwind CSS, Context API, React Router and Recharts. It shows detail regarding almost all the cryptocurrency. You can easily convert the price in your local currency.</p>
                     <div class="small_box_content">
                       <a href=""><img src="../../../assets/img/project_img/webflow_icon.png" alt=""></a>
-                      <button><a href="">Visit Projects</a></button>
+                      <button><a href="/sub-projects">Visit Projects</a></button>
                     </div>
                   </div>
                 </div>
