--- a/portfolio/src/app/components/sub-projects/sub-projects.component.css
+++ b/portfolio/src/app/components/sub-projects/sub-projects.component.css
@@ -204,5 +204,132 @@
     bottom: 5px;
     transform: translateY(-50%);
   }
+
+  .img_footer{
+    position: relative;
+  }
+  .img_footer img{
+    width: 100%;
+
+    z-index: -1;
+  }
+
+  .img_footer h3{
+    font-size: 30px;
+    font-family: istok;
+    font-weight: 800;
+
+    color: var(--white-color);
+    content: "";
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    line-height: 1.5;
+  }
+
+
+
+  .centered-button {
+    font-family: istok;
+    font-weight: 800;
+    color: var(--black-color);
+    position: absolute;
+    top: 62%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background-color: #FF3731;
+  }
+
+  .scaling-button {
+    padding: 10px 20px;
+    font-size: 16px;
+    transition: transform 0.3s ease-in-out;
+    background-color: #FF3731;
+  }
+
+  .scaling-button:hover {
+    transform: scale(1.1);
+    transform-origin: center;
+    cursor: pointer;
+  }
+  .pre_next{
+    margin-bottom: 2%;
+    display: flex;
+  }
+
+  .pre_next .col-4 .block1,
+  .pre_next .col-4 .block2{
+    display: flex;
+
+  }
+  .pre_next .col-4 .block1 .text{
+    width: 100%;
+  }
+  /* block1 */
+  .pre_next .col-4 .block1 .text p{
+    transform: translate(50%,-50%);
+    top: 50%;
+    left: -35%;
+    position: relative;
+    text-align: left;
+  }
+  /* block2 */
+  .pre_next .col-4 .block2 .text p{
+    transform: translate(-50%,-50%);
+    float: right;
+    top: 50%;
+    left: 35%;
+    position: relative;
+    text-align: right;
+  }
+  .block1 .text span,
+  .block2 .text span{
+    color: var(--black-color);
+    opacity: 0.5;
+    font-size: 14px;
+    font-family: istok;
+    font-weight: 600;
+  }
+
+  .block1 .text p,
+  .block2 .text p{
+    color: var(--black-color);
+    font-size: 18px;
+    font-family: istok;
+    font-weight: 600;
+  }
+
+  .block1 img:hover,
+  .block2 img:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+  }
+  .go_back p:hover{
+    transform: scale(1.1);
+    transition: transform 0.3s ease-in-out;
+    cursor: pointer;
+  }
+  .go_back p{
+    color: var(--black-color);
+    font-size: 18px;
+    font-family: istok;
+    font-weight: 600;
+    position: relative;
+    top: 30%;
+  }
+  .go_back p::after{
+    width: 100%;
+    content: "";
+    top: 100%;
+    height: 2px;
+    background-color: var(--black-color);
+    color: black;
+    transform: translateX(-50%);
+    position: absolute;
+    left: 50%;
+  }
 }
 
